[package]
name = "ocpp-server"
version = "0.1.0"
authors = ["Altonotch <info@altonotch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
log = "0.4"
env_logger = "0.9"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.15", features = ["full"] }
warp = "0.3"
thiserror = "1.0"
rust-ocpp = "0.1"
chrono = "0.4"
