[package]
name = "ocpp-server"
version = "0.1.0"
authors = ["Franck Barbenoire <contact@franck-barbenoire.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.9"
log = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
rust-ocpp = "0.1"
tungstenite = "0.17"
